# suika

./: .gitignore  CLAUDE.md  README.md  bocal.py  collision.py  constants.py  fruit.py  gui.py  preview.py  pyproject.toml  requirements.txt  ruff.toml  run_suika.sh  simu_shake.ods  sprites.py  suika.py  test_pyglet.py  utils.py  walls.py
src/suika/: __init__.py  game.py  main.py
src/suika/assets/sources/: animated-smoke-explosion-clouds-animation-sprite-vector-42270884.avif
src/suika/core/: __init__.py  constants.py  utils.py
src/suika/graphics/: __init__.py  sprites.py
src/suika/physics/: __init__.py  bocal.py  collision.py  fruit.py
src/suika/ui/: __init__.py  gui.py  preview.py
src/suika_game/: __init__.py  game.py  main.py
src/suika_game/assets/: explosion.xcf
src/suika_game/assets/sources/: animated-smoke-explosion-.xcf  cartoon-smoke-explosion-game-sprite-animate-effect-vector.xcf
src/suika_game/core/: __init__.py  constants.py  utils.py
src/suika_game/graphics/: __init__.py  sprites.py
src/suika_game/physics/: __init__.py  bocal.py  collision.py  fruit.py
src/suika_game/ui/: __init__.py  gui.py  preview.py
