[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suika-game"
version = "1.0.0"
description = "Suika Game implementation in Python"
requires-python = ">=3.11"
dependencies = [
    "pyglet==2.1.8",
    "pymunk==7.1.0",
]

[project.scripts]
suika = "suika_game.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"suika_game" = ["assets/*"]